src/index.css
@import "tailwindcss";

@theme {
  --font-manrope: "Manrope", sans-serif;
  --font-inter: "Inter", sans-serif;

  --color-on-primary-fixed-variant: #3f465c;
  --color-surface-container: #eeeeee;
  --color-inverse-surface: #2f3131;
  --color-on-tertiary: #ffffff;
  --color-surface-container-high: #e8e8e8;
  --color-on-error-container: #93000a;
  --color-primary-fixed-dim: #bec6e0;
  --color-on-primary: #ffffff;
  --color-on-surface: #1a1c1c;
  --color-outline: #76777d;
  --color-tertiary-fixed-dim: #bfc8ce;
  --color-surface-bright: #f9f9f9;
  --color-inverse-primary: #bec6e0;
  --color-tertiary-container: #141d21;
  --color-on-tertiary-fixed-variant: #3f484d;
  --color-on-background: #1a1c1c;
  --color-on-error: #ffffff;
  --color-on-surface-variant: #45464d;
  --color-surface-container-highest: #e2e2e2;
  --color-primary-container: #131b2e;
  --color-tertiary: #000000;
  --color-on-tertiary-container: #7c858b;
  --color-surface-dim: #dadada;
  --color-surface-tint: #565e74;
  --color-on-tertiary-fixed: #141d21;
  --color-background: #f9f9f9;
  --color-primary: #000000;
  --color-surface-variant: #e2e2e2;
  --color-secondary-container: #d5e3fd;
  --color-on-secondary: #ffffff;
  --color-inverse-on-surface: #f0f1f1;
  --color-secondary: #515f74;
  --color-surface: #f9f9f9;
  --color-on-secondary-fixed-variant: #3a485c;
  --color-error-container: #ffdad6;
  --color-surface-container-lowest: #ffffff;
  --color-tertiary-fixed: #dbe4ea;
  --color-on-secondary-container: #57657b;
  --color-error: #ba1a1a;
  --color-secondary-fixed: #d5e3fd;
  --color-on-primary-container: #7c839b;
  --color-outline-variant: #c6c6cd;
  --color-secondary-fixed-dim: #b9c7e0;
  --color-surface-container-low: #f3f3f4;
  --color-on-primary-fixed: #131b2e;
  --color-on-secondary-fixed: #0d1c2f;
  --color-primary-fixed: #dae2fd;
  --color-ice-blue: #F0F9FF;
  --color-navy-slate: #0F172A;

  @keyframes fade-in-up {
    from {
      opacity: 0;
      transform: translateY(20px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }

  --animate-fade-in-up: fade-in-up 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) forwards;
}

@layer base {
  body {
    @apply bg-surface text-on-surface font-inter antialiased overflow-x-hidden;
  }
}

.material-symbols-outlined {
  font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 24;
}

.glass-nav {
  @apply backdrop-blur-[20px] bg-white/70;
}

